--- a/index.html
+++ b/index.html
@@ -14,18 +14,6 @@
 		<nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
   			<div class="container-fluid">
     			<ul class="navbar-nav">
-      				<li class="nav-item">
-        				<a class="nav-link active" href="index.html">Home</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="contact.html">Contact Us</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aboutus.html">About US</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="cv.html">CV</a>
-      				</li>
       				
     			</ul>
   			</div>
@@ -35,7 +23,14 @@
 
 
 		<!-- Main center Content -->
-		<div id="content"> 
+	<div class="row container-fluid pt-5">	
+		<div id="sidebar" class="col-md-2"> 
+			<span class="badge rounded-pill bg-warning text-dark">
+				Left Sidebar
+
+			</span>
+		</div>
+		<div id="content" class="col-md-8"> 
 		<div id="one">
 			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -45,13 +40,23 @@
 			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
 		</div>
 	
+		</div>
+
+
+		
+		
+			<div id="rightbar" class="col-md-2"> 
+				<span class="badge rounded-pill bg-warning text-dark">Right sidebar
+
+				</span> 
+			</div>
+
 	</div>
 
+		<div id="footer">
+			<span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span>  
 
-		<div id="sidebar"> <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
 		</div>
-		<div id="rightbar"> <span class="badge rounded-pill bg-warning text-dark">Right sidebar</span> </div>
-		<div id="footer"><span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span>  </div>
 
 </body>
 </html>
