--- a/index.html
+++ b/index.html
@@ -1,62 +1,78 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>SHABBIR</title>	
-		<meta charset="utf8">
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-	</head>
 
-	
-
-
-	<body>
-		<nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
-  			<div class="container-fluid">
-    			<ul class="navbar-nav">
-      				
-    			</ul>
-  			</div>
-		</nav>
+<head>
+	<title>SHABBIR</title>
+	<meta charset="utf8">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+</head>
 
 
 
 
-		<!-- Main center Content -->
-	<div class="row container-fluid pt-5">	
-		<div id="sidebar" class="col-md-2"> 
+<body>
+	<nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
+		<div class="container-fluid">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link active" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="aboutus.html">About US</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="cv">CV</a>
+				</li>
+
+			</ul>
+		</div>
+	</nav>
+
+
+
+
+	<!-- Main center Content -->
+	<div class="row container-fluid pt-5 my-3 bg-warning">
+		<div id="sidebar" class="col-md-2">
 			<span class="badge rounded-pill bg-warning text-dark">
 				Left Sidebar
+			</span>
+		</div>
+		<div id="content" class="col-md-8">
+			<div id="one">
+				<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<img
+					src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
+				<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
+			</div>
+
+		</div>
+
+
+
+
+		<div id="rightbar" class="col-md-2">
+			<span class="badge rounded-pill bg-warning text-dark">Right sidebar
 
 			</span>
 		</div>
-		<div id="content" class="col-md-8"> 
-		<div id="one">
-			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
-			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-		</div>
-	
-		</div>
-
-
-		
-		
-			<div id="rightbar" class="col-md-2"> 
-				<span class="badge rounded-pill bg-warning text-dark">Right sidebar
-
-				</span> 
-			</div>
 
 	</div>
 
-		<div id="footer">
-			<span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span>  
+	<div id="footer" class="col-md-12">
+		<span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling
+		</span>
 
-		</div>
+	</div>
 
 </body>
+
 </html>
