--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>SHABBIR</title>	
-		<meta charset="utf8">
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-	</head>
 
-	
-
-
-	<body>
-		<div id="header"><img src="https://previews.123rf.com/images/sharafmaksumov/sharafmaksumov1809/sharafmaksumov180901291/107812971-illustration-of-pink-and-blue-impasto-with-long-brush-strokes-banner-background.jpg"></div>
+<head>
+	<title>SHABBIR</title>
+	<meta charset="utf8">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+</head>
 
 
-			<div id="menu"> 
-				<ul>
-					<a href="index.html"><li>Home</li></a>
-					<a href="contact.html"><li>Contact</li></a>
-					<a href="aboutus.html"><li>About Us</li></a>
-					<a href="cv.html"><li>CV Form</li></a>
-				</ul>
-			</div>
-
-		<div id="content"> 
-			<form>
-				<p>Id: <input type="text" placeholder="write your id"></p>
-				<p>Name: <input type="text" placeholder="write your name"></p>
-				<p>Email: <input type="text" placeholder="write your email"></p>
-				<p>Country: <select>
-						<option value="Bangladesh"></option>
-						<option value="Bangladesh"></option>
-						<option value="Bangladesh"></option>
-					</select>
-				</p>
-				<input type="submit" name="">
-			</form>
-
-	
-		</div>
 
 
-		<div id="sidebar"> <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
-		</div>
-		<div id="rightbar"> <span class="badge rounded-pill bg-warning text-dark">Right sidebar</span> </div>
-		<div id="footer"><span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span>  </div>
+<body>
+	<div id="header"><img
+			src="https://previews.123rf.com/images/sharafmaksumov/sharafmaksumov1809/sharafmaksumov180901291/107812971-illustration-of-pink-and-blue-impasto-with-long-brush-strokes-banner-background.jpg">
+	</div>
+
+
+	<div id="menu">
+		<ul>
+			<a href="index.html">
+				<li>Home</li>
+			</a>
+			<a href="contact.html">
+				<li>Contact</li>
+			</a>
+			<a href="aboutus.html">
+				<li>About Us</li>
+			</a>
+			<a href="cv.html">
+				<li>CV Form</li>
+			</a>
+		</ul>
+	</div>
+
+	<div id="content">
+		<form>
+			<p>Id: <input type="text" placeholder="write your id"></p>
+			<p>Name: <input type="text" placeholder="write your name"></p>
+			<p>Email: <input type="text" placeholder="write your email"></p>
+			<p>Country: <select>
+					<option value="Bangladesh"></option>
+					<option value="Bangladesh"></option>
+					<option value="Bangladesh"></option>
+				</select>
+			</p>
+			<input type="submit" name="">
+		</form>
+
+
+	</div>
+
+
+	<div id="sidebar"> <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
+	</div>
+	<div id="rightbar"> <span class="badge rounded-pill bg-warning text-dark">Right sidebar</span> </div>
+	<div id="footer"><span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span> </div>
 
 </body>
+
 </html>
