--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
     </div>
     <div class="row  pt-1 ">
-        <div id="sidebar" class="col-md-2 bg-primary">
+
+
+        <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
             <span class=" bg-warning text-dark">
 				Left Sidebar
 				<ul class="navbar-nav">
@@ -61,6 +63,7 @@
 				</ul>
 			</span>
         </div>
+
 
         <div id="content" class="col-md-8 bg-secondary container-fluid">
             <div id="one">
