--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Home || City University</title>
     <meta charset="utf8">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
@@ -36,7 +37,8 @@
 
     <!-- Main center Content -->
     <div class="col-md-12 row container-fluid">
-        <img src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA">
+        <img
+            src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA">
 
 
     </div>
@@ -45,31 +47,34 @@
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
             <span class=" bg-warning text-dark">
-				Left Sidebar
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact Us</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="aboutus.html">About US</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="cv">CV</a>
-					</li>
-	
-				</ul>
-			</span>
+                Left Sidebar
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cv">CV</a>
+                    </li>
+
+                </ul>
+            </span>
         </div>
 
 
         <div id="content" class="col-md-8 bg-secondary container-fluid">
             <div id="one">
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img
+                    src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
+                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
             </div>
 
@@ -78,17 +83,16 @@
         <div id="rightbar" class="col-md-2 bg-primary container-fluid">
             <span class="badge rounded-pill bg-warning text-dark">Right sidebar
 
-			</span>
+            </span>
         </div>
 
     </div>
 
-    <div id="footer" class="col-md-12">
+    <div id="footer" class="col-md-12  bg-dark">
         <span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling
-		</span>
+        </span>
 
     </div>
 
 </body>
-
 </html>
