--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+			<a href="index.html" class="navbar-brand">City University</a>
+		</div>
         <div class="container-fluid">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Home</a>
                 </li>
@@ -27,7 +30,7 @@
                     <a class="nav-link" href="aboutus.html">About US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cv">CV</a>
+                    <a class="nav-link" href="cv.html">CV</a>
                 </li>
 
             </ul>
@@ -42,7 +45,7 @@
 
 
     </div>
-    <div class="row  pt-1 ">
+    <div class="row ">
 
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
@@ -88,11 +91,9 @@
 
     </div>
 
-    <div id="footer" class="col-md-12  bg-dark">
-        <span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling
-        </span>
+	<footer class="p-5 bg-dark ">
 
-    </div>
+	</footer>
 
 </body>
 </html>
