--- a/aboutus.html
+++ b/aboutus.html
@@ -2,75 +2,106 @@
 <html>
 
 <head>
-	<title>SHABBIR</title>
-	<meta charset="utf8">
-	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <title>Home || City University</title>
+    <meta charset="utf8">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
 
 
 <body>
-	<div id="header"><img
-			src="https://previews.123rf.com/images/sharafmaksumov/sharafmaksumov1809/sharafmaksumov180901291/107812971-illustration-of-pink-and-blue-impasto-with-long-brush-strokes-banner-background.jpg">
-	</div>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+			<a href="index.html" class="navbar-brand">City University</a>
+		</div>
+        <div class="container-fluid">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cv.html">CV</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 
-	<div id="menu">
-		<ul>
-			<a href="index.html">
-				<li>Home</li>
-			</a>
-			<a href="contact.html">
-				<li>Contact</li>
-			</a>
-			<a href="aboutus.html">
-				<li>About Us</li>
-			</a>
-			<a href="cv.html">
-				<li>CV Form</li>
-			</a>
-		</ul>
-	</div>
-
-	<div id="content">
-		<table border="3px" width="100%" id="table1">
-			<tr>
-				<th colspan="3" align="center">Student Informations</th>
-			</tr>
-			<tr>
-				<th>Student ID</th>
-				<th>Name</th>
-				<th>Department</th>
-			</tr>
-			<tr>
-				<td>1915002527</td>
-				<td>Shabbir Hossen</td>
-				<td rowspan="4">CSE</td>
-			</tr>
-			<tr>
-				<td>1915002531</td>
-				<td>Kazi Anan Habib Sorna</td>
-			</tr>
-			<tr>
-				<td>1915002524</td>
-				<td>Nahar</td>
-			</tr>
-			<tr>
-				<td>1915002533</td>
-				<td>Faruk</td>
-			</tr>
-
-		</table>
+    <!-- Main center Content -->
+    <div class="col-md-12 row container-fluid">
+        <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Cityuniversycam.png/1200px-Cityuniversycam.png">
 
 
-	</div>
+    </div>
+    <div class="row ">
 
 
-	<div id="sidebar"> <span class="badge rounded-pill bg-warning text-dark">Left Sidebar</span>
-	</div>
-	<div id="rightbar"> <span class="badge rounded-pill bg-warning text-dark">Right sidebar</span> </div>
-	<div id="footer"><span class="badge rounded-pill bg-warning text-dark">Sun lights sparkling</span> </div>
+        <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
+            <span class=" bg-warning text-dark">
+                Left Sidebar
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cv">CV</a>
+                    </li>
+
+                </ul>
+            </span>
+        </div>
+
+
+        <div id="content" class="col-md-8 bg-secondary container-fluid">
+            <p>
+            <h1>
+                About City University
+            </h1>
+
+            It was in Mid-autumn 2002 that City University started with fifteen students, two departments,
+            meager resources, and a group of dedicated and dynamic teachers. 16 years since 2002, we have now Eight
+            thousand
+            brilliant students, six computer laboratories, two mechanical workshop and laboratories, one digital
+            laboratory,
+            physics and chemistry laboratories, an extensive textile laboratory, ten booming departments (with two other
+            departments in
+            the process of being organized), well-trained teachers, a spirited team of support staff, and a dedicated
+            management group.
+            What started as an experimental project has now been transformed into a prestigious educational institute
+            with a wide range of well educated, both local and global.
+            </p>
+
+        </div>
+
+        <div id="rightbar" class="col-md-2 bg-primary container-fluid">
+            <span class="badge rounded-pill bg-warning text-dark">Right sidebar
+
+            </span>
+        </div>
+
+    </div>
+
+	<footer class="p-5 bg-dark ">
+
+	</footer>
 
 </body>
 
