--- a/cv.html
+++ b/cv.html
@@ -13,9 +13,12 @@
 
 
 
-	<nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
+	<nav class=" navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+		<div class="container">
+			<a href="index.html" class="navbar-brand">City University</a>
+		</div>
 		<div class="container-fluid">
-			<ul class="navbar-nav">
+			<ul class="navbar-nav ms-auto">
 				<li class="nav-item">
 					<a class="nav-link active" href="index.html">Home</a>
 				</li>
@@ -245,7 +248,22 @@
 
 
 
+
 	</div>
+	<footer class="p-5 bg-dark text-white text-center position-relative">
+		City University
+		<div class="container">
+			<p class="lead">
+				Copy wright &copy; Md. Shabbir Hossen
+				<a href="" class="position-absulate botom-0 end-0 p-5">
+					<i class="bi bi-arrow-up-circle h1"></i>
+				</a>
+
+			</p>
+
+		</div>>
+
+	</footer>
 </body>
 
 </html>
