--- a/cv.html
+++ b/cv.html
@@ -250,7 +250,7 @@
 
 
 	</div>
-	<footer class="p-5 bg-dark text-white text-center position-relative">
+	<footer class="p-5 bg-primary text-white text-center position-relative">
 		City University
 		<div class="container">
 			<p class="lead">
