--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Home || City University</title>
     <meta charset="utf8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -38,19 +39,23 @@
     </nav>
 
 
-    <!-- Main center Content -->
-    <div class="col-md-12 row container-fluid">
+
+ <!--Cover Pic-->
+    <div class="row bg-dark container-fluid">
         <img
             src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA">
-
-
     </div>
+
+
+
+
+       <!-- Main center Content -->
     <div class="row ">
 
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
-            <span class=" bg-warning text-dark">
-                Left Sidebar
+            <span class=" badge rounded-pill bg-warning text-dark">
+                Left Sidebar</span>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
@@ -62,11 +67,11 @@
                         <a class="nav-link" href="aboutus.html">About US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cv">CV</a>
+                        <a class="nav-link" href="cv.html">CV</a>
                     </li>
 
                 </ul>
-            </span>
+            
         </div>
 
 
@@ -91,7 +96,18 @@
 
     </div>
 
-	<footer class="p-5 bg-dark ">
+	<footer class="p-5 bg-dark text-white text-center position-relative">
+		City University
+		<div class="container">
+			<p class="lead">
+				Copy wright &copy; Md. Shabbir Hossen
+				<a href="" class="position-absulate botom-0 end-0 p-5">
+					<i class="bi bi-arrow-up-circle h1"></i>
+				</a>
+
+			</p>
+
+		</div>>
 
 	</footer>
 
