--- a/aboutus.html
+++ b/aboutus.html
@@ -16,8 +16,8 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container">
-			<a href="index.html" class="navbar-brand">City University</a>
-		</div>
+            <a href="index.html" class="navbar-brand">City University</a>
+        </div>
         <div class="container-fluid">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -38,14 +38,13 @@
     </nav>
 
 
-    <!-- Main center Content -->
-    <div class="col-md-12 row container-fluid">
-        <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Cityuniversycam.png/1200px-Cityuniversycam.png">
 
 
-    </div>
-    <div class="row ">
+
+
+
+
+    <div class="row mt-5">
 
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
@@ -99,9 +98,19 @@
 
     </div>
 
-	<footer class="p-5 bg-dark ">
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">
+                Copy wright &copy; Md. Shabbir Hossen
+                <a href="" class="position-absulate botom-0 end-0 p-5">
+                    <i class="bi bi-arrow-up-circle bi-color-light h1"></i>
+                </a>
 
-	</footer>
+            </p>
+
+        </div>>
+
+    </footer>
 
 </body>
 
