--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Home || City University</title>
+	<title>Contact || City University</title>
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
@@ -16,6 +16,8 @@
 
 <body>
 	<!-- Nav bar -->
+	<div class="row">
+	</div class="col-md-12">
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">City University</a>
@@ -37,48 +39,16 @@
 			</ul>
 		</div>
 	</nav>
-
-
-	<!-- Carousel -->
-	<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-		<!-- Indicators/dots -->
-		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-			<button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-			<button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-		</div>
-
-		<!-- The slideshow/carousel -->
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
-					 class="d-block" style="width:100%">
-			</div>
-			<div class="carousel-item">
-				<img src="https://c8.alamy.com/comp/PA9WF7/school-supplies-with-colorful-paper-background-education-banner-PA9WF7.jpg"
-					 class="d-block" style="width:100%">
-			</div>
-			<div class="carousel-item">
-				<img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
-					 class="d-block" style="width:100%">
-			</div>
-		</div>
-
-		<!-- Left and right controls/icons -->
-		<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon"></span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-			<span class="carousel-control-next-icon"></span>
-		</button>
+	</div>
 	</div>
 
 
 
 
 
-	<div class="row ">
+
+
+	<div class="row mt-5 pt-0">
 
 
 		<div id="sidebar" class="container col-md-2 nav-link text-dark navbar-light bg-primary">
@@ -104,33 +74,59 @@
 		</div>
 
 
-		<div id="content" class="col-md-8 bg-secondary container-fluid">
+		<div class="col-md-10 bg-secondary container pt-3">
 			<div>
-				<h1>CITY UNIVERSITY</h1>
-				City University is a Top ranking Private University in Bangladesh having own Permanent Campus
-				established at Khagan, Savar and City Information and Admission Center at Panthapath, Dhaka.
-			</div> <br>
-			<div>
-				CITY UNIVERSITY
-				City University is a Top ranking Private University in Bangladesh having own Permanent Campus
-				established at Khagan, Savar and City Information and Admission Center at Panthapath, Dhaka.
+				<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
+				<p class="lead">
+					Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
+
+					Cell: +880 1854-640476,
+
+					+880 1862-213214 <br>
+
+					E-mail: ar@cityuniversity.edu.bd
+				</p>
 			</div>
-			<div class="col-md-4">
-				CITY UNIVERSITY
-				City University is a Top ranking Private University in Bangladesh having own Permanent Campus
-				established at Khagan, Savar and City Information and Admission Center at Panthapath, Dhaka.
+			<div>
+				<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
+				<p class="lead">
+					Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
+
+					Cell: +880 1854-640476,
+
+					+880 1862-213214 <br>
+
+					E-mail: ar@cityuniversity.edu.bd
+				</p>
+			</div>
+			<div>
+				<h3>Permanent Campus, <span class="text-danger">City University</span></h3>
+				<p class="lead">
+					Khagan, Ashulia, Birulia, Savar, Dhaka, Bangladesh
+
+					Cell: +880 1854-640476,
+
+					+880 1862-213214 <br>
+
+					E-mail: ar@cityuniversity.edu.bd
+				</p>
 			</div>
 		</div>
 
 
-		<div id="rightbar" class="col-md-2 bg-primary container-fluid">
-			<span class="badge rounded-pill bg-warning text-dark">Right sidebar
-
-			</span>
-		</div>
 
 	</div>
-	<footer class="p-5 bg-dark ">
+	<footer class="p-5 bg-dark text-white text-center position-relative">
+		<div class="container">
+			<p class="lead">
+				Copy wright &copy; Md. Shabbir Hossen
+				<a href="" class="position-absulate botom-0 end-0 p-5">
+					<i class="bi bi-arrow-up-circle bi-color-light h1"></i>
+				</a>
+
+			</p>
+
+		</div>>
 
 	</footer>
 
