--- a/index.html
+++ b/index.html
@@ -40,11 +40,41 @@
 
 
 
- <!--Cover Pic-->
-    <div class="row bg-dark container-fluid">
-        <img
-            src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA">
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+    <!-- Indicators/dots -->
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
     </div>
+
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
+                class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="https://c8.alamy.com/comp/PA9WF7/school-supplies-with-colorful-paper-background-education-banner-PA9WF7.jpg"
+                class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
+                class="d-block" style="width:100%">
+        </div>
+    </div>
+
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+
 
 
 
@@ -102,7 +132,7 @@
 			<p class="lead">
 				Copy wright &copy; Md. Shabbir Hossen
 				<a href="" class="position-absulate botom-0 end-0 p-5">
-					<i class="bi bi-arrow-up-circle h1"></i>
+					<i class="bi bi-arrow-up-circle bi-color-light h1"></i>
 				</a>
 
 			</p>
