--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Home || City University</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" 
+    href="CSS/style.css">
+    <link rel="stylesheet" type="text/css" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
@@ -64,11 +66,11 @@
 
         <!-- Left and right controls/icons -->
         <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </button>
+            <span class="carousel-control-prev-icon"></span>
+        </button>
         <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </button>
+            <span class="carousel-control-next-icon"></span>
+        </button>
     </div>
 
 
@@ -81,7 +83,7 @@
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
             <span class=" badge rounded-pill bg-warning text-dark">
-                Left Sidebar</span>
+            Left Sidebar</span>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Home</a>
@@ -101,13 +103,8 @@
         </div>
 
 
-        <div id="content" class="col-md-8 bg-secondary container-fluid">
-            <div id="one">
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-            </div>
+        <div class="col-md-8 bg-secondary container-fluid">
+            
 
         </div>
 
@@ -125,12 +122,12 @@
             <p class="lead">
                 Copy wright &copy; Md. Shabbir Hossen
                 <a href="" class="position-absulate botom-0 end-0 p-5">
-                    <i class="bi bi-arrow-up-circle bi-color-light h1"></i>
+                    <i class="bi bi-arrow-up-circle bi-color-dark h1"></i>
                 </a>
 
             </p>
 
-        </div>>
+        </div>
 
     </footer>
 
